# robot_worlds

./: CMakeLists.txt  README.md  package.xml  robot_controller.xml
feature_maps/: 4x4_one_box_1x1.yaml  4x4_one_box_1xpt5.yaml  4x4_one_cylinder_pt3.yaml  4x4_two_cylinders_pt3.yaml  calc_circle.py  iilab.yaml  plot_keypoints.py  square_box_rectangle.yaml  square_no_box.xml  square_no_box.yaml  square_one_box.yaml  square_two_boxes.yaml
include/robot_worlds/: FakeDetector.hpp  FeatureStruct.hpp  MapLoader.hpp  PathTracker.hpp  RobotController.hpp
launch/: controller_and_map_launch.py  controller_launch.py  fake_detector_launch.py  just_controller.py  path_tracker_launch.py
maps/: 4x4_one_box_1x1.pgm  4x4_one_box_1x1.yaml  4x4_one_box_1xpt5.yaml  4x4_one_cylinder_pt3.pgm  4x4_one_cylinder_pt3.yaml  square_no_box.yaml  square_one_box.yaml  square_two_boxes.yaml
maps/4x4_one_box_1x1/: 4x4_one_box_1x1.pgm
maps/4x4_one_box_1xpt5/: 4x4_one_box_1xpt5.pgm
maps/4x4_one_cylinder_pt3/: 4x4_one_cylinder_pt3.pgm
maps/4x4_two_cylinders_pt3/: 4x4_two_cylinders_pt3.pgm  4x4_two_cylinders_pt3.yaml
maps/iilab/: iilab.pgm  iilab.yaml
maps/square_five_boxes/: square_five_boxes.pgm  square_five_boxes.yaml
maps/square_no_box/: square_no_box.pgm
maps/square_one_box/: square_one_box.pgm
maps/square_two_boxes/: square_two_boxes.pgm
msg/: Feature.msg
rviz/: Paths.rviz  corners_orientation.rviz  tf_and_map.rviz
src/: FakeDetector.cpp  MapLoader.cpp  PathTracker.cpp  RobotController.cpp
urdf/: robot.urdf
worlds/: .4x4_one_box_1x1.wbproj  .4x4_one_box_1xpt5.wbproj  .4x4_one_cylinder_pt3.wbproj  .square_no_box.wbproj  .square_one_box.wbproj  4x4_one_box_1xpt5.wbt  calc.py  calc_2.py  square_box_rectangle.wbt  square_five_boxes.wbt  square_no_box.wbt  square_one_box.wbt  square_two_boxes.wbt
worlds/4x4_one_box_1x1/: 4x4_one_box_1x1.wbt
worlds/4x4_one_box_1xpt5/: 4x4_one_box_1xpt5.wbt
worlds/4x4_one_cylinder_pt3/: 4x4_one_cylinder_pt3.wbt
worlds/4x4_two_cylinders_pt3/: .4x4_two_cylinders_pt3.wbproj  4x4_two_cylinders_pt3.wbt
worlds/RGBD_test/: .RGBD_test.wbproj  RGBD_test.wbt
worlds/iilab/: .iilab.wbproj  iilab.wbt
worlds/iilab/objects/: CircularDriveTable.mtl  ProjectionTable.mtl  TV+Stand.mtl  TreeConveyorSytem.mtl  armazemverticalassNameAndGrouped.mtl  asscompletaOriginalNameAndGrouped.blend1.mtl  desktop_pc.mtl
worlds/iilab/objects/Robots/AGCMoses/Models/Bledner/: agv_mosesNamedAndGrouped.mtl
worlds/iilab/objects/Robots/Jack/Models/Bledner/: AssJackNamedAndGrouped.mtl
worlds/iilab/objects/Robots/Kuka LBR iiwa 14 R820/Model/Blender/: Kuka LBR iiwa 14 R820.blend  Kuka LBR iiwa 14 R820.mtl
worlds/iilab/objects/Robots/Motoman/Models/Blender/: Motoman.blend  Motoman.mtl  MotomanYaskawaModified.blend
worlds/iilab/objects/Robots/UR10/Models/Blender/: UR10.blend
worlds/iilab/objects/Robots/URMobileRobot/Models/Blender/: UR10BaseMobileRobot.blend
worlds/iilab_test/: .iilab_test.wbproj  iilab_test.wbt
worlds/iilab_test/objects/: BeltConveyor.mtl  Chair.mtl  Monitor.mtl  Table.mtl  assmcNameAndGrouped.mtl  bastidorpaleteNameAndGrouped.mtl  haasMiniMill.mtl  iiIabModified.fbx
worlds/iilab_test/objects/Robots/ABB IRB 2600/Blender/: ABB_IRB_2600.blend  ABB_IRB_2600.mtl
worlds/iilab_test/objects/Robots/Motoman/Models/Blender/: MotomanYaskawaModified.mtl
worlds/iilab_test/objects/Robots/UR5/Blender/: UR5.blend
worlds/square_box_rectangle/: .square_box_rectangle.wbproj
worlds/square_five_boxes/: .square_five_boxes.wbproj  square_five_boxes.wbt
worlds/square_no_box/: .square_no_box.wbproj  square_no_box.wbt
worlds/square_one_box/: .square_one_box.wbproj
worlds/square_two_boxes/: .square_two_boxes.wbproj  square_two_boxes.wbt
